RC_Car_FullProject/RC_Car_LE_Bluetooth.cydsn/REBUILD.log
--------------- Rebuild Started: 09/19/2020 19:20:17 Project: RC_Car_LE_Bluetooth, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\RC_Car_LE_Bluetooth.cycdx"
Deleting file ".\RC_Car_LE_Bluetooth.svd"
Deleting file ".\RC_Car_LE_Bluetooth.rpt"
Deleting file ".\RC_Car_LE_Bluetooth_timing.html"
cydsfit.exe -.appdatapath "C:\Users\11800025\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\11800025\Documents\GitHub\Rc_Car_Full_Project\RC_Car_FullProject\RC_Car_LE_Bluetooth.cydsn\RC_Car_LE_Bluetooth.cyprj -d CY8C4247LQI-BL483 -s C:\Users\11800025\Documents\GitHub\Rc_Car_Full_Project\RC_Car_FullProject\RC_Car_LE_Bluetooth.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c:127:3: error: expected identifier or '(' before '/' token
 }*/
   ^
In file included from BLE.c:17:0,
                 from main.c:4:
BLE.h:32:14: warning: 'M_L' defined but not used [-Wunused-variable]
 static uint8 M_L = 0;
              ^
BLE.h:33:14: warning: 'M_R' defined but not used [-Wunused-variable]
 static uint8 M_R = 0; 
              ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 09/19/2020 19:20:36 ---------------
